src/components/AboutProject/AboutProject.css
.about-project {
  padding: 110px 0;
}

.about-project__content {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 70px;
}

.about-project__title {
  width: 100%;
  margin: 0;
  padding-bottom: 23px;
  border-bottom: 1px solid #dadada;
  font-weight: 400;
  font-size: 22px;
  line-height: 1.21;
  letter-spacing: -0.04em;
}

.about-project__info-container {
  grid-column-gap: 40px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
}

.about-project__info-title {
  margin: 70px 0 0;
  font-weight: 400;
  font-size: 20px;
  line-height: 1.21;
  letter-spacing: -0.04em;
}

.about-project__info-text {
  margin: 26px 0 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.43;
}

.about-project__time-bar {
  grid-row-gap: 16px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  margin-top: 110px;
}

.about-project__time-bar-spent {
  margin: 0;
  padding: 10px 0 10px 14px;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.21;
}

.about-project__time-bar-spent_column_left {
  background: linear-gradient(to right, #3ddc84 40%, #303030 40%);
  color: #000;
}

.about-project__time-bar-spent_column_right {
  background: #303030;
}

.about-project__time-bar-caption {
  margin: 0;
  padding-left: 14px;
  color: #8b8b8b;
  font-weight: 500;
  font-size: 14px;
  line-height: 1.21;
}

@media screen and (max-width: 1279px) {
  .about-project {
    padding: 90px 20px;
  }
  .about-project__content {
    padding: 0 30px;
  }
  .about-project__info-container {
    grid-column-gap: 32px;
  }
  .about-project__info-text {
    margin: 24px 0 0;
    font-size: 12px;
    line-height: 1.5;
  }
  .about-project__time-bar {
    grid-template-columns: minmax(140px, 1fr) 4fr;
    margin-top: 91px;
  }
  .about-project__time-bar-spent {
    padding-left: 0;
    font-weight: 400;
    text-align: center;
  }
  .about-project__time-bar-spent_column_left {
    background: #3ddc84;
    color: #000;
  }
  .about-project__time-bar-spent_column_right {
    background: #303030;
  }
  .about-project__time-bar-caption {
    padding-left: 0;
    font-weight: 400;
    text-align: center;
  }
}

@media screen and (max-width: 767px) {
  .about-project {
    padding: 72px 4px;
  }
  .about-project__content {
    padding: 0 14px;
  }
  .about-project__info-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }
  .about-project__title {
    padding-bottom: 28px;
    font-size: 18px;
    line-height: 1.21;
  }
  .about-project__info-title {
    margin: 60px 0 0;
    font-size: 18px;
    line-height: 1.21;
  }
  .about-project__info-text {
    margin: 18px 0 0;
    font-size: 11px;
    line-height: 1.45;
  }
  .about-project__time-bar {
    grid-row-gap: 10px;
    grid-template-columns: minmax(100px, 1fr) 4fr;
    margin-top: 62px;
  }
  .about-project__time-bar-spent {
    font-weight: 400;
    font-size: 11px;
    line-height: 1.21;
  }
  .about-project__time-bar-caption {
    font-weight: 400;
    font-size: 11px;
    line-height: 1.16;
  }
}

